--- a/index.html
+++ b/index.html
@@ -5,30 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merequetenge Bot</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
-    <script src="./js/script.js" defer></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body data-theme="dark">
     <header>
         <h1>Merequetenge Bot</h1>
         <button class="theme-switch" onclick="toggleTheme()">🌓</button>
     </header>
+
+    <h1 class="aviso">PAGINA EN DESARROLLO...</h1>
+    
     <section class="hero">
-        <h1 class="aviso">PAGINA EN DESARROLLO...</h1>
         <h1>Bienvenido a Merequetenge</h1>
         <p>El bot de Discord con múltiples funcionalidades...</p>
         <a href="#about" class="cta">Conóceme</a>
     </section>
+    <nav>
+        <a href="#about">Sobre</a>
+        <a href="#features">Características</a>
+        <a href="#contact">Contacto</a>
+    </nav>
     <main>
         <section id="about" class="bot-info">
             <h2>Sobre Merequetenge</h2>
             <p>Merequetenge es un bot de Discord con múltiples funcionalidades...</p>
         </section>
-        <nav>
-            <a href="#about">Sobre</a>
-            <a href="#features">Características</a>
-            <a href="#contact">Contacto</a>
-        </nav>
         <section id="features" class="bot-info">
             <h2>Características</h2>
             <p>Algunas de las características de Merequetenge incluyen...</p>
@@ -41,5 +42,6 @@
     <footer>
         <p>&copy; 2024 Merequetenge. Todos los derechos reservados.</p>
     </footer>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
